<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/dark_grey"
    android:weightSum="6.25"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/preview_calculation"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="0.25"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:padding="@dimen/padding"
        android:background="@color/green_screen"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="30sp"
        android:layout_marginHorizontal="10dp"
        android:padding="@dimen/padding"
        android:background="@color/green_screen"
        android:text="@string/screen"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textAlignment="textEnd"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5">

        <Button
            android:id="@+id/m_add"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/m_add"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/mr"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/mr"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/clear_element"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/ce"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_red"
            android:text="@string/c"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonText"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/pot"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/pot"
            android:textColor="@color/red"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5">

        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/add"
            android:textColor="@color/red"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/subtract"
            android:textColor="@color/red"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5">

        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/div"
            android:textColor="@color/red"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/multiply"
            android:textColor="@color/red"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5">

        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/root"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/square"
            android:textColor="@color/red"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/percent"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/percent"
            android:textColor="@color/red"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5">

        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/coma"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/sign_change"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/mas_menos"
            android:textColor="@color/red"
            android:textSize="@dimen/buttonText"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:backgroundTint="@color/button_red"
            android:text="@string/equal"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/buttonOperatorsAndNumbers"
            app:cornerRadius="@dimen/cornerRadius"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</LinearLayout>